app/stylesheets/design/_page.scss
/* ... */
.articles_published_by_day .article {
  margin-bottom: 1em;
  padding-bottom: 1em;
  }

#sections .article,
#wordpress .blog_post_list .article {
  border-bottom: 1px dotted #cdcdcd;
  }
.article .metadata {
  color: #7a838a;
  font-size: 1em;
  margin-bottom: .5em;
  }
.article.with_photo .info {
  display: inline;
  float: left;
  position: relative;
  margin-left: 10px;
  margin-right: 10px;
  width: 460px;
  }
.article.with_photo .photo {
  display: inline;
  float: left;
  position: relative;
  margin-left: 10px;
  margin-right: 10px;
  width: 160px;
  }
.article.with_photo .photo figure {
  margin: 0 !important; /* Over-ride chrome figure margin. Needs important until we fix html5 helper. */
  }  
.article.with_photo.on_left .photo {
  left: -480px;
  margin-right: 0;
  }
.article.with_photo.on_left .info {
  left: 180px;
  margin-left: 0;
  }
.article.with_photo.on_right .photo { margin-right: 0; }
.article.with_photo.on_right .info { margin-left: 0; }
.figure {
  background: #e6e6e6;
  float: left;
  padding: .5em;
  position: relative;
  }
.figcaption {
  font-size: .9em;
  width: 130px;
  }
.figcaption a {
  display: block;
  }
.article.with_photo.on_right .figure {
  float: right;
  }  
#sections div > .article:last-child,
#sections div > .article.lastchild  {
  border-bottom: none;
  }
  
/******************************

COMMENT PERIOD CLOSING

******************************/
#comments-closing-opening { clear: both; }
#comments-closing-opening .header-nav { display: none; }
.comments li {
  margin: 0;
  list-style-type: none;
  margin-bottom: 10px;
  overflow: auto;
  padding: 0;
  }
.group {
  clear: both;
  margin-bottom: 1em;
  overflow: hidden;
  }

/******************************

ARTICLE VIEW 

******************************/
#metadata_content_area {
  margin-bottom: 2em;
  }
#flash_message {
  @include border-radius(5px);  
  background: #E6E6E6;
  color: #6E6E6E;
  line-height: 20px;
  margin: 1em 0;
  overflow: hidden;  
  position: relative;
  }
#flash_message .button {
  background: $green;
  color: #fff;
  font-weight: normal;
  margin: 0;
  padding: 0 1em;
  position: absolute;
  right: 0;
  top: 0;
  min-width: 193px;
  text-align: center;
  }  
#flash_message .button:hover {
  background: $golden;
  }  
#flash_message p {
  @include apertura-condensed;
  line-height: 20px;  
  margin: 0;
  padding: 0;
  line-height: 3em;
  padding-left: 40px;
  }
#flash_message.pdf_only p {
  background: sprite-image('icons/icon_errors.png', 15px, 9px, 100px) no-repeat;
  }
#flash_message.comment p {
  background: sprite-image('icons/icon_comment.png', 10px, 14px, 20px) no-repeat;
  }  
.article .metadata_list dt {
  text-transform: none;
  }  
.box {
  border-bottom: 1px solid #dadada;    
  clear: both;
  overflow: hidden;
  padding: 1em 0;
  }
.box .button {
  margin-bottom: 0;
  }
.box .button:first-child,
.box .button.firstchild {
  margin-left: 25px;
  }
#sidebar .aside_box {
  margin-bottom: 1em;
  }
#sidebar .aside_box ul.bullets {
  margin-bottom: 0;
  }
#entries .box h4 {
  display: inline;
  margin: 0 1em 0 0;
  vertical-align: text-top;
  }
.header_column h1,
.header_column #table_of_contents,
.header_column #table_of_graphics
  {
  clear: both;
  color: $powder_blue;
  font-size: 1.4em;
  @include apertura-condensed;
  margin: 0 0 1em;
  padding-top: 0;
  text-align: right;
  text-transform: uppercase;
  word-wrap: break-word;
  }
.header_column h2 {
  font-size: 1.3em;
  line-height: 1.5em;
  margin-top: 0;
  text-align: right;
  }
#entries.show .metadata,
#regulatory_plans.show .metadata {
  font-size: 1.3em;
  }
.metadata_share_bar {
  border-bottom:1px solid #CCCCCC;
  border-top:1px solid #CCCCCC;
  margin:0.5em 0;
  overflow:hidden;
  padding:0.5em 0
  }
.metadata_share_bar .metadata {
  margin-bottom: 0;
  padding-bottom: 0;
  }
.metadata_share_bar .share {
  position: relative;
  }
.metadata_share_bar .share ul {
  @include horizontal-list;
  position: absolute;
  right: 0;
  top: 0;
  }   
#entries.show .back_to_top {
  color: #aaa;
  font-size: .8em;
  text-transform: none;
  }
#entries.show h1 .back_to_top,
#entries.show h2 .back_to_top {
  display: block;
  font-weight: normal;
  }
#entries.show .body_column,
#entries.show .header_column {
  margin-bottom: 2em;
  }  
#entries.show .body_column h3,  
#entries.show .body_column h4,
.timeline_info {
  @include gesta;
  font-size: 1.3em;
  line-height: 1.5;
  position: relative;
  }
#entries.show .body_column h3 {
  font-weight: 700;
  }  
#entries.show .body_column h4,
.timeline_info {
  font-size: 1.2em;
  font-style: italic;
  font-weight: 400;
  }  
#entries.show .body_column .back_to_top {
  font-style: normal;
  font-weight: normal;
  position: absolute;
  right: -75px;
  top: 0;
  }  
.body_column h3,
.body_column h4,
.body_column h5 {
  margin: 2em 0 1em;
  }
/* TODO HELP-DESIGN add target styles, fadeout after a bit? */
/*h1:target,  
h2:target,
h3:target,
p:target {
  background: $aside_box_background;
  }  */
#entries.show .body_column > h3:first-child,
#entries.show .body_column > h3.firstchild {
  margin-top: 0;
  padding-top: 0;
  }
#entries.show .table_of_contents .level_2 {
  margin-left: 1em;
  }
#entries.show .table_of_contents .level_3 {
  margin-left: 2em;
  }  
#entries.show .body_column p:first-child,
#entries.show .body_column p.firstchild {
  text-indent: 0;
  }
.table_of_graphics li {
  background: none;
  float: left;
  list-style: none;
  margin: 0 10px 1em 0;
  }
.table_of_graphics li.start_of_row {
  clear: both;
  }
.table_of_graphics li.end_of_row {
  margin-right: 0;
  }
#fulltext_content_area p {
  text-indent: 2em;
  }
#fulltext_content_area p.flush {
  text-indent: 0;
  }  
#entries.show .body_column:empty {
  display: none;
  margin: 0;
  }  
.E-03 {
 font-style: italic; 
  }
.E-04 {
  font-weight: bold;
  }
.metadata_list dt,
.metadata_list dd {
  display: block;
  }
.metadata_list dt {
  text-align: left;
  margin-top: .5em;
  }
/* ... */

